# Lumen

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BUG_REVIEW.md  CODE_REVIEW_2026-05-30.md  CODE_REVIEW_未提交改动.md  CONTRIBUTING.md  DEEP_BUG_AUDIT.md  DESKTOP_BUG_AUDIT.md  DESKTOP_BUG_AUDIT_2026-05-29.md  Dockerfile.python  LICENSE  README.md  SERVER_BUG_AUDIT_2026-05-29.md  VIDEO_BUG_AUDIT_2026-06-10.md  docker-compose.bluegreen.yml  docker-compose.public-dns.yml  docker-compose.yml  pyproject.toml
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/desktop/: README.md  env.py
apps/api/alembic/versions/: 0001_initial.py  0002_invites_settings_v1_finish.py  0003_robust_indexes.py  0005_system_prompts.py  (+42 more)
apps/api/app/: arq_pool.py  audit.py  billing_cache_state.py  byok_service.py  config.py  db.py  db_desktop_ext.py  deps.py  desktop_entry.py  desktop_migrations.py  intent.py  main.py  observability.py  proxy_pool.py  public_urls.py  ratelimit.py  redis_client.py  runtime_settings.py  security.py  sse_publish.py  task_billing.py  video_options.py  video_reference_images.py  video_reference_videos.py  volcano_asset_media.py  volcano_assets.py
apps/api/tests/: conftest.py  test_admin_backups.py  test_admin_dlq_retry.py  test_admin_models_endpoint.py  test_admin_request_events.py  test_admin_storage.py  test_admin_telegram.py  test_admin_update.py  test_alembic_env.py  test_apparel_library_reference.py  test_apparel_library_sync.py  test_apparel_scene_planner.py  test_auth_config.py  test_auth_ratelimit.py  test_auth_security.py  test_billing_consistency_migration.py  test_billing_route.py  test_billing_value_helpers.py  test_billing_window_migration.py  test_byok_route.py  test_byok_service.py  test_canvas_api.py  test_canvas_execution_guards.py  test_canvas_projection_guards.py  test_canvas_retry_isolation.py  test_chat_model_default.py  test_context_health.py  test_conversations_compact.py  test_conversations_messages.py  test_core_security_infra.py  test_cors.py  test_csrf.py  test_desktop_local_token.py  test_desktop_migrations.py  test_desktop_routes.py  test_events_route.py  test_generations_feed.py  test_health.py  test_idempotency_serialization.py  test_image_route_migration.py  (+49 more)
apps/desktop/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/capabilities/: main-desktop-bridge.json  main-startup-bridge.json
apps/desktop/icons/: icon.icns
apps/desktop/permissions/: desktop-commands.toml
apps/desktop/src/: backup.rs  diagnostics.rs  docker_import.rs  main.rs  power.rs  secrets.rs  sidecar.rs
apps/desktop/windows/: hooks.nsh
apps/tgbot/: pyproject.toml
apps/tgbot/app/: api_client.py  config.py  keyboards.py  listener.py  main.py  middlewares.py  proxy_manager.py  states.py  tracker.py
apps/tgbot/tests/: test_api_client.py  test_config.py  test_generation_tracking.py  test_helpers.py  test_keyboards.py  test_listener_delivery.py  test_proxy_manager.py  test_tracker.py
apps/worker/: README.md  pyproject.toml
apps/worker/app/: account_limiter.py  billing.py  byok_runtime.py  completion_billing.py  config.py  db.py  db_desktop_ext.py  desktop_entry.py  http_retry.py  image_artifacts.py  main.py  observability.py  provider_pool.py  retry.py  runtime_settings.py  sse_publish.py  storage.py  upstream.py  upstream_image_requests.py  validation.py  video_artifacts.py  video_billing.py  video_events.py  video_provider_slots.py  video_submit_cache.py  video_upstream.py  video_upstream_content.py
apps/worker/tests/: conftest.py  test_account_limiter.py  test_auto_title.py  test_background_removal_alpha_refine.py  test_background_removal_qc.py  test_billing_idempotency.py  test_bug_audit_worker_regressions.py  test_byok_runtime.py  test_canvas_execution_reconcile.py  test_completion_context_window.py  test_completion_lease.py  test_completion_parts.py  test_completion_tool_image.py  test_completion_web_search.py  test_context_image_caption.py  test_context_summary.py  test_context_summary_postgres.py  test_context_summary_prometheus.py  test_context_window_helpers.py  test_drain_invariants.py  test_dual_race_bonus_billing.py  test_dual_race_image.py  test_generation_diagnostics.py  test_generation_inflight_provider.py  test_generation_initial_claim.py  test_generation_multiqueue.py  test_generation_parts_boundaries.py  test_generation_postprocess.py  test_generation_short_circuit.py  test_generation_storage.py  test_http_retry.py  test_image_artifacts.py  test_image_execution_refactor.py  test_image_failover_multi_provider.py  test_image_queue_lock_lease.py  test_inpaint_mask.py  test_maturity_hardening_regressions.py  test_memory_extraction_idempotency.py  test_model_library_tagging.py  test_moderation_provider_retry.py  (+48 more)
(+1126 files in other folders)
