# 顶层 uv workspace：`uv sync` 会同时装 packages/core、apps/api、apps/worker、apps/tgbot。
# 不用 uv 也行，在各子包里 `pip install -e .` 也能起。

[project]
name = "lumen"
version = "1.0.3"
description = "多模态 AI 工作室 —— Chat / Vision / 文生图 / 图生图，一个对话搞定"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/core", "apps/api", "apps/worker", "apps/tgbot"]

# Dev dependencies (PEP 735)；`uv sync` 默认会装 dev group，CI 也走默认行为。
[dependency-groups]
dev = [
    "pytest>=9.0,<10.0",
    "pytest-asyncio>=1.3,<2.0",
]
